plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.4'
}

repositories {
    mavenCentral()
}

group = 'com.restaurant'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
    useJUnit()
    testLogging {
        events 'passed', 'failed', 'skipped'
        showStandardStreams = true
    }
}
ext{
    camelVersion = '4.4.3'
    fibersLibrariesVersion = '2.+'
    log4jVersion = '2.22.+'
}
dependencies {
    implementation "org.apache.camel:camel-core:${camelVersion}"
    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
    implementation "org.db4j:kilim:${fibersLibrariesVersion}"
}
